[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Death_2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Float_3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Float_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Death_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Float_0.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Death_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Atk_2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Death_1.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Float_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Atk_0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Atk_3.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Personagens/Ghost/Ghost 4x_Ghost - Atk_1.png" type="Texture" id=12]
[ext_resource path="res://Scripts/SCRIPT_Ghost.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": false,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.3231, 18.9923 )

[sub_resource type="CircleShape2D" id=3]
radius = 384.0

[node name="Node2D" type="Node2D"]

[node name="Ghost" type="Area2D" parent="."]
scale = Vector2( -1, 1 )
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ghost"]
position = Vector2( 0, -4.76837e-07 )
scale = Vector2( 0.802793, 0.802793 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ghost"]
scale = Vector2( 1.26367, 1.26367 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="Ghost" groups=[
"Inimigos",
]]
position = Vector2( -48, 0 )

[node name="Area2D" type="Area2D" parent="Ghost"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ghost/Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="Ghost"]
wait_time = 1.05
[connection signal="area_entered" from="Ghost" to="Ghost" method="_on_Ghost_area_entered"]
[connection signal="animation_finished" from="Ghost/AnimatedSprite" to="Ghost" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Ghost/Area2D" to="Ghost" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Ghost/Area2D" to="Ghost" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Ghost/Timer" to="Ghost" method="_on_Timer_timeout"]
